resource/kompose/analysis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: analysis
  name: analysis
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: analysis
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.network/hobbit-core: "true"
        io.kompose.service: analysis
    spec:
      containers:
      - env:
        - name: HOBBIT_RABBIT_HOST
          value: rabbit
        image: hobbitproject/hobbit-analysis-component:latest
        imagePullPolicy: ""
        name: analysis
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
