resource/kompose/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes hostPath
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: keycloak
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
    io.kompose.service: keycloak
  strategy:
    type: Recreate
  template:
    metadata:
    annotations:
        kompose.cmd: kompose convert --volumes hostPath
        kompose.version: 1.21.0 ()
    creationTimestamp: null
    labels:
        io.kompose.network/hobbit: "true"
        io.kompose.service: keycloak
    spec:
    containers:
    - image: hobbitproject/hobbit-keycloak:latest
        imagePullPolicy: ""
        name: keycloak
        ports:
        - containerPort: 8080
        resources: {}
        volumeMounts:
        - mountPath: /opt/jboss/keycloak/standalone/data/db
        name: keycloak-hostpath0
    restartPolicy: Always
    serviceAccountName: ""
    volumes:
    - hostPath:
        path: /Users/hasi/Documents/Masters/PG/platform/resource/kompose/config/keycloak
        name: keycloak-hostpath0
status: {}
