resource/kompose/platform-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-controller
  labels:
    app: platform-controller
  annotations:
    "cni.projectcalico.org/ipv4pools": "[\"hobbit-core\"]"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platform-controller
  template:
    metadata:
      labels:
        app: platform-controller
    spec:
      containers:
      - name: platform-controller
        image: hobbitproject/hobbit-platform-controller:latest
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: dockersock
          hostPath:
            path: /var/run/docker.sock
