resource/kompose/rabbit-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes hostPath
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: rabbit
  name: rabbit
spec:
  replicas: 1
  selector:
    matchLabels:
    io.kompose.service: rabbit
  strategy: {}
  template:
    metadata:
    annotations:
        kompose.cmd: kompose convert --volumes hostPath
        kompose.version: 1.21.0 ()
    creationTimestamp: null
    labels:
        io.kompose.network/hobbit: "true"
        io.kompose.network/hobbit-core: "true"
        io.kompose.service: rabbit
    spec:
    containers:
    - image: rabbitmq:management
        imagePullPolicy: ""
        name: rabbit
        ports:
        - containerPort: 15672
        - containerPort: 5672
        resources: {}
    restartPolicy: Always
    serviceAccountName: ""
    volumes: null
status: {}
