resource/kompose/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: redis
  annotations:
    "cni.projectcalico.org/ipv4pools": "[\"hobbit-core\"]"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
      annotations:
        "cni.projectcalico.org/ipv4pools": "[\"hobbit-core\"]"
    spec:
      containers:
        - name: redis
          image: redis:4.0.7
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: redis-server
              mountPath: "/data"
          command:
            - redis-server
            - "/data/redis.conf"
      volumes:
        - name: redis-server
          hostPath:
            path: /config/redis-db
