resource/kompose/storage-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storage-service
  labels:
    app: storage-service
  annotations:
    "cni.projectcalico.org/ipv4pools": "[\"hobbit-core\"]"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: storage-service
  template:
    metadata:
      labels:
        app: storage-service
      annotations:
        "cni.projectcalico.org/ipv4pools": "[\"hobbit-core\"]"
    spec:
      containers:
        - name: storage-service
          image: hobbitproject/hobbit-storage-service:latest
          imagePullPolicy: IfNotPresent
