resource/kompose/gui-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes hostPath
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: gui
  name: gui
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    io.kompose.service: gui
status:
  loadBalancer: {}
