resource/kompose/gui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gui
  labels:
    app: gui
  annotations:
    "cni.projectcalico.org/ipv4pools": "[\"hobbit-core\",\"hobbit\"]"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gui
  template:
    metadata:
      labels:
        app: gui
      annotations:
        "cni.projectcalico.org/ipv4pools": "[\"hobbit-core\",\"hobbit\"]"
    spec:
      containers:
        - name: gui
          image: hobbitproject/hobbit-gui:latest
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 8080

---

apiVersion: apps/v1
kind: Service
metadata:
  name: gui
  labels:
    app: gui
  annotations:
    "cni.projectcalico.org/ipv4pools": "[\"hobbit-core\",\"hobbit\"]"
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: gui
