resource/kompose/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes hostPath
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: keycloak
  name: keycloak
spec:
  ports:
  - name: "8181"
    port: 8181
    targetPort: 8080
  selector:
    io.kompose.service: keycloak
status:
  loadBalancer: {}
