resource/kompose/rabbit-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yml convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: rabbit
  name: rabbit
spec:
  ports:
  - name: "8081"
    port: 8081
    targetPort: 15672
    protocol: TCP
  - name: "5672"
    port: 5672
    targetPort: 5672
    protocol: TCP
  selector:
    io.kompose.service: rabbit
status:
  loadBalancer: {}
