resource/kompose/vos-service.yaml
apiVersion: v1
kind: Service
metadata:
    annotations:
      kompose.cmd: kompose convert --volumes hostPath
      kompose.version: 1.21.0 ()
    creationTimestamp: null
    labels:
      io.kompose.service: vos
    name: vos
spec:
    ports:
    - name: "8890"
      port: 8890
      targetPort: 8890
    selector:
      io.kompose.service: vos
status:
    loadBalancer: {}
