resource/kompose/hobbit-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: hobbit
spec:
  ingress:
  - from:
    - ipBlock:
        cidr: 172.16.100.0/24
    - podSelector:
        matchLabels:
        io.kompose.network/hobbit: "true"
  podSelector:
    matchLabels:
    io.kompose.network/hobbit: "true"
